<resources>
    <string name="app_name">ToeicTBD</string>
    <string name="facebook_app_id">1040203079520227</string>
    <string name="facebook_login_protocol_scheme">fb1040203079520227</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="mini_test">Mini Test</string>
    <string name="listening_english">Listening English</string>
    <string name="reading_english">Reading English</string>
    <string name="dictionary">Dictionary</string>
    <string name="voa_learning_english">VOA Learning English</string>
    <string name="communicate">Communicate</string>
    <string name="login">Login</string>
    <string name="share">Share</string>
    <string name="about_me">About Me</string>
    <string name="practice_toeic">Practice Toeic</string>
    <string name="speech_prompt">Say some thing</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grammar_english">Grammar English</string>
</resources>
